syntax = "proto3";


option go_package = "server/proto;proto";
import "video_user.proto";

message UserInfoRequest {
  int64 user_id = 1; // 用户id
  string token = 2;  // 用户鉴权token
}

message UserInfoResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  User user = 3;                  // 用户信息
}

message UserLoginRequest {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message UserLoginResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  int64 user_id = 3;              // 用户id
  string token = 4;               // 用户鉴权token
}

message UserRegisterRequest {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message UserRegisterResponse {
  int32 status_code = 1;          // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  int64 user_id = 3;              // 用户id
  string token = 4;               // 用户鉴权token
}